syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Sample.ChatHub.Server.API.Protos";


service UserSync{
	rpc SyncMessage(SyncMessageRequest) returns(google.protobuf.BoolValue);
}


message SyncMessageRequest{
	string UserId = 1;
	repeated MessageList Messages = 2;
}

message MessageList{
	string IdChat = 1;
	string MessageId = 2; 
	string SenderId = 3;
	string Text = 4;
}
